--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -2,34 +2,34 @@
 <html lang="en">
 <head runat="server">
     <style>
-    .pulse {
-    height: 50px;
-    width: 50px;
-    position: absolute;
-    margin: auto;
-    display: grid;
-    place-items: center;
-}
+        .pulse {
+            height: 50px;
+            width: 50px;
+            position: absolute;
+            margin: auto;
+            display: grid;
+            place-items: center;
+        }
 
-    .pulse:before,
-    .pulse:after {
-        content: "";
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-color: #8a82fb;
-        border-radius: 50%;
-        z-index: -1;
-        opacity: 0.7;
-    }
+            .pulse:before,
+            .pulse:after {
+                content: "";
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                background-color: #8a82fb;
+                border-radius: 50%;
+                z-index: -1;
+                opacity: 0.7;
+            }
 
-    .pulse:before {
-        animation: pulse 5s ease-out infinite;
-    }
+            .pulse:before {
+                animation: pulse 5s ease-out infinite;
+            }
 
-    .pulse:after {
-        animation: pulse 5s 1s ease-out infinite;
-    }
+            .pulse:after {
+                animation: pulse 5s 1s ease-out infinite;
+            }
     </style>
     <script>
         var VDTIME = '@ViewData["TIME"]'.toLowerCase();
@@ -50,7 +50,7 @@
     @*    <script src="https://cdn.jsdelivr.net/npm/rsvp@4/dist/rsvp.min.js"></script>*@
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <script src="/Assests/js/ajax.min.js" type="text/javascript"></script>
-   <link href="/css/master1.css" rel="stylesheet" />
+    <link href="/css/master1.css" rel="stylesheet" />
     <script>css_require('/css/main.custom.css')</script>
     <script>css_require("/css/text_editor.css")</script>
     <script>css_require("/css/button.css")</script>
@@ -77,7 +77,7 @@
         <div class="collapse navbar-collapse w-auto h-auto ps">
             <ul class="navbar-nav" id="sidenav-collapse-main">
             </ul>
-            
+
         </div>
         <div class="sidenav-footer mx-3 mt-3 pt-3">
             <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-        
+
     </aside>
 
     <main class="main-content border-radius-lg ">
@@ -128,70 +128,40 @@
                             <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-bell cursor-pointer" aria-hidden="true"></i>
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-end px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+                            <ul class="dropdown-menu dropdown-menu-end px-2 py-3 me-sm-n4 show" aria-labelledby="dropdownMenuButton">
                                 <li class="mb-2">
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
+                                            <div class="my-auto" id="languageJP">
+                                                <img src="./Assets/img/icons/flags/japan-48.png" class="avatar avatar-sm  me-3 " alt="user image">
+                                            </div>
+                                            <h6 class="text-sm font-weight-normal mb-1">
+                                                <span class="font-weight-bold">JanPan</span>
+                                            </h6>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="mb-2">
+                                    <a class="dropdown-item border-radius-md" href="javascript:;">
+                                        <div class="d-flex py-1" id="languageVN">
                                             <div class="my-auto">
-                                                <img src="../../assets/img/team-2.jpg" class="avatar avatar-sm  me-3 " alt="user image">
+                                                <img src="./Assets/img/icons/flags/vietnam.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
                                             </div>
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="text-sm font-weight-normal mb-1">
-                                                    <span class="font-weight-bold">New message</span> from Laur
-                                                </h6>
-                                                <p class="text-xs text-secondary mb-0">
-                                                    <i class="fa fa-clock me-1" aria-hidden="true"></i>
-                                                    13 minutes ago
-                                                </p>
-                                            </div>
+                                            <h6 class="text-sm font-weight-normal mb-1">
+                                                <span class="font-weight-bold">VietNam</span> 
+                                            </h6>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="mb-2">
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
-                                            <div class="my-auto">
-                                                <img src="../../assets/img/small-logos/logo-spotify.svg" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
+                                            <div class="my-auto" id="languageUS">
+                                                <img src="./Assets/img/icons/flags/US.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
                                             </div>
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="text-sm font-weight-normal mb-1">
-                                                    <span class="font-weight-bold">New album</span> by Travis Scott
-                                                </h6>
-                                                <p class="text-xs text-secondary mb-0">
-                                                    <i class="fa fa-clock me-1" aria-hidden="true"></i>
-                                                    1 day
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item border-radius-md" href="javascript:;">
-                                        <div class="d-flex py-1">
-                                            <div class="avatar avatar-sm bg-gradient-secondary  me-3  my-auto">
-                                                <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                                    <title>credit-card</title>
-                                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                                        <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF" fill-rule="nonzero">
-                                                            <g transform="translate(1716.000000, 291.000000)">
-                                                                <g transform="translate(453.000000, 454.000000)">
-                                                                    <path class="color-background" d="M43,10.7482083 L43,3.58333333 C43,1.60354167 41.3964583,0 39.4166667,0 L3.58333333,0 C1.60354167,0 0,1.60354167 0,3.58333333 L0,10.7482083 L43,10.7482083 Z" opacity="0.593633743"></path>
-                                                                    <path class="color-background" d="M0,16.125 L0,32.25 C0,34.2297917 1.60354167,35.8333333 3.58333333,35.8333333 L39.4166667,35.8333333 C41.3964583,35.8333333 43,34.2297917 43,32.25 L43,16.125 L0,16.125 Z M19.7083333,26.875 L7.16666667,26.875 L7.16666667,23.2916667 L19.7083333,23.2916667 L19.7083333,26.875 Z M35.8333333,26.875 L28.6666667,26.875 L28.6666667,23.2916667 L35.8333333,23.2916667 L35.8333333,26.875 Z"></path>
-                                                                </g>
-                                                            </g>
-                                                        </g>
-                                                    </g>
-                                                </svg>
-                                            </div>
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="text-sm font-weight-normal mb-1">
-                                                    Payment successfully completed
-                                                </h6>
-                                                <p class="text-xs text-secondary mb-0">
-                                                    <i class="fa fa-clock me-1" aria-hidden="true"></i>
-                                                    2 days
-                                                </p>
-                                            </div>
+                                            <h6 class="text-sm font-weight-normal mb-1">
+                                                <span class="font-weight-bold">US-UK</span>
+                                            </h6>
                                         </div>
                                     </a>
                                 </li>
@@ -276,71 +246,71 @@
             <div class="card-body pt-sm-3 pt-0">
             </div>
         </div>
-        
-    <div class="position-fixed bottom-1 end-1 z-index-2" id="MS_Notification">
-    </div>
 
-    <div class="position-absolute top-0 start-50 translate-middle-x z-index-2" id="MS_NotificationTop">
-        <div id="CallCenter_Area" class="toast fade show p-2 mt-2 bg-gradient-info d-none" role="alert" aria-live="assertive" aria-atomic="true">
-            <audio id="audio_callcenter" autoplay="autoplay" loop></audio>
-            <div class="toast-header bg-transparent border-0">
-                <i class="fab fa-stumbleupon-circle fa-spin text-md text-white me-3" aria-hidden="true"></i>
-                <span id="CallCenter_Header" class="me-auto text-white font-weight-bold">Incomming Call</span>
+        <div class="position-fixed bottom-1 end-1 z-index-2" id="MS_Notification">
+        </div>
 
-            </div>
-            <hr class="horizontal light m-0">
-            <div class="toast-body text-white">
-                <div class="d-flex align-items-center">
-                    <div class="icon icon-shape icon-sm me-3 shadow text-center">
-                        <img id="CallCenter_Avatar" alt="avatar" src="/assests/img/gray.png"
-                             class="call-animation avatar avatar-sm" />
-                    </div>
-                    <div class="d-flex flex-column">
-                        <h6 id="CallCenter_Phone" class="text-md text-white mb-0"></h6>
-                        <h6 id="CallCenter_Name" class="mb-1 text-sm text-white"></h6>
-
-                    </div>
+        <div class="position-absolute top-0 start-50 translate-middle-x z-index-2" id="MS_NotificationTop">
+            <div id="CallCenter_Area" class="toast fade show p-2 mt-2 bg-gradient-info d-none" role="alert" aria-live="assertive" aria-atomic="true">
+                <audio id="audio_callcenter" autoplay="autoplay" loop></audio>
+                <div class="toast-header bg-transparent border-0">
+                    <i class="fab fa-stumbleupon-circle fa-spin text-md text-white me-3" aria-hidden="true"></i>
+                    <span id="CallCenter_Header" class="me-auto text-white font-weight-bold">Incomming Call</span>
 
                 </div>
-                <div class="d-flex ms-5" id="CallCenter_MultiPhone">
-                </div>
-                <div class="d-flex mt-4" id="CallCenter_HangDiv">
-                    <div class="text-center">
-                        <button class="btn bg-gradient-light btn-sm my-0"
-                                onclick="event.preventDefault();return CCF_Incom_Decline()">
-                            Decline
-                        </button>
-                    </div>
-                    <div class="d-flex flex-column ms-auto">
-                        <button class="btn bg-gradient-success btn-sm my-0"
-                                onclick="event.preventDefault();return CCF_Incom_Accept();">
-                            Accept
-                        </button>
-                    </div>
-                </div>
-                <div id="CallCenter_ProgressingArea" class="d-flex mt-4 d-none">
-                    <div class="text-center">
-                        <div id="CallCenter_ProgressingTime"></div>
-                    </div>
-                    <div class="d-flex ms-auto">
-
-                        <div id="CallCenter_ProgressingMute" class=" cursor-pointer  icon-shape icon-xs shadow border-radius-lg blur text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="fas fa-microphone text-dark  text-md pt-2" style=" font-size: 14px;"></i>
+                <hr class="horizontal light m-0">
+                <div class="toast-body text-white">
+                    <div class="d-flex align-items-center">
+                        <div class="icon icon-shape icon-sm me-3 shadow text-center">
+                            <img id="CallCenter_Avatar" alt="avatar" src="/assests/img/gray.png"
+                                 class="call-animation avatar avatar-sm" />
                         </div>
-                        <div id="CallCenter_ProgressingUnMute" class="cursor-pointer  icon icon-shape icon-xs shadow border-radius-lg bg-gradient-danger text-center me-2 d-flex align-items-center justify-content-center d-none">
-                            <i class="text-white fas fa-microphone-slash text-md pt-2" style=" font-size: 14px;"></i>
+                        <div class="d-flex flex-column">
+                            <h6 id="CallCenter_Phone" class="text-md text-white mb-0"></h6>
+                            <h6 id="CallCenter_Name" class="mb-1 text-sm text-white"></h6>
+
                         </div>
 
-                        <span id="CallCenter_ProgressingEndCall" class="cursor-pointer badge bg-gradient-danger">End call</span>
+                    </div>
+                    <div class="d-flex ms-5" id="CallCenter_MultiPhone">
+                    </div>
+                    <div class="d-flex mt-4" id="CallCenter_HangDiv">
+                        <div class="text-center">
+                            <button class="btn bg-gradient-light btn-sm my-0"
+                                    onclick="event.preventDefault();return CCF_Incom_Decline()">
+                                Decline
+                            </button>
+                        </div>
+                        <div class="d-flex flex-column ms-auto">
+                            <button class="btn bg-gradient-success btn-sm my-0"
+                                    onclick="event.preventDefault();return CCF_Incom_Accept();">
+                                Accept
+                            </button>
+                        </div>
+                    </div>
+                    <div id="CallCenter_ProgressingArea" class="d-flex mt-4 d-none">
+                        <div class="text-center">
+                            <div id="CallCenter_ProgressingTime"></div>
+                        </div>
+                        <div class="d-flex ms-auto">
 
+                            <div id="CallCenter_ProgressingMute" class=" cursor-pointer  icon-shape icon-xs shadow border-radius-lg blur text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="fas fa-microphone text-dark  text-md pt-2" style=" font-size: 14px;"></i>
+                            </div>
+                            <div id="CallCenter_ProgressingUnMute" class="cursor-pointer  icon icon-shape icon-xs shadow border-radius-lg bg-gradient-danger text-center me-2 d-flex align-items-center justify-content-center d-none">
+                                <i class="text-white fas fa-microphone-slash text-md pt-2" style=" font-size: 14px;"></i>
+                            </div>
+
+                            <span id="CallCenter_ProgressingEndCall" class="cursor-pointer badge bg-gradient-danger">End call</span>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script>
-    </script>
-    @await RenderSectionAsync("Scripts", required: false)
-    <script src="./Assests/dist/signalr/dist/browser/signalr.js"></script>
+        <script>
+        </script>
+        @await RenderSectionAsync("Scripts", required: false)
+        <script src="./Assests/dist/signalr/dist/browser/signalr.js"></script>
 </body>
 </html>
