--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -125,14 +125,14 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown pe-2 d-flex align-items-center">
-                            <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a href="javascript:;" class="nav-link text-body p-0" id="Languagesdropdown" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-bell cursor-pointer" aria-hidden="true"></i>
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-end px-2 py-3 me-sm-n4 show" aria-labelledby="dropdownMenuButton">
-                                <li class="mb-2">
+                            <ul class="dropdown-menu dropdown-menu-end px-2 py-3 me-sm-n4" id="CkeckLanguages" aria-labelledby="dropdownMenuButton">
+                                <li class="mb-2 LanguagesSetting">
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
-                                            <div class="my-auto" id="languageJP">
+                                            <div class="my-auto">
                                                 <img src="./Assets/img/icons/flags/japan-48.png" class="avatar avatar-sm  me-3 " alt="user image">
                                             </div>
                                             <h6 class="text-sm font-weight-normal mb-1">
@@ -141,9 +141,9 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li class="mb-2">
+                                <li class="mb-2 LanguagesSetting">
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
-                                        <div class="d-flex py-1" id="languageVN">
+                                        <div class="d-flex py-1">
                                             <div class="my-auto">
                                                 <img src="./Assets/img/icons/flags/vietnam.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
                                             </div>
@@ -153,10 +153,10 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li class="mb-2">
+                                <li class="mb-2 LanguagesSetting">
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
-                                            <div class="my-auto" id="languageUS">
+                                            <div class="my-auto">
                                                 <img src="./Assets/img/icons/flags/US.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
                                             </div>
                                             <h6 class="text-sm font-weight-normal mb-1">
@@ -312,5 +312,6 @@
         </script>
         @await RenderSectionAsync("Scripts", required: false)
         <script src="./Assests/dist/signalr/dist/browser/signalr.js"></script>
+        <script src="/js/Common/LoadLanguages_Packege.js"></script>
 </body>
 </html>
