--- a/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
@@ -4,50 +4,91 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container-fluid px-0">
+<div class="container-fluid py-4">
     <div class="row">
-        <div class="col-12">
-            <div class="card mb-3">
-                <div class="card-header p-3 pb-0">
-                    <div class="d-lg-flex">
-                        <div class="w-50 col-auto my-auto">
+        <div class="col-lg-7 position-relative z-index-2">
+            <div class="card card-plain mb-4">
+                <div class="card-body p-3">
+                    <div class="row">
+                        <div class="col-lg-6">
                             <div class="h-100">
-                                <h6 data-languagestatic="carrer_detail_header" class="mb-0">Chi Tiết Nghề Nghiệp</h6>
-                                <p data-languagestatic="" class="text-sm mb-0">Some text of detail sub</p>
+                                <h6 data-languagestatic="carrer_detail_header" class="mb-0">Dashboards</h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-body p-3 pt-2">
-                    <div class="row px-1 form3" id="form_Career">
-                        <div class="field col-12 p-1">
-                            <label data-languagestatic="name">Nghề Nghiệp</label>
-                            <input id="CareerJob" class="form-control" name="username" type="text" />
+            </div>
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <div class="card  mb-4">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="numbers">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">User Number Accessing</p>
+                                        <h5 class="font-weight-bolder mb-0">
+                                            <span id="Dash_User_Number_Accessing" countto="123">123</span>
+                                            <span class="text-success text-sm font-weight-bolder">
+                                                55%
+                                            </span>
+                                        </h5>
+                                    </div>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                                        <i class="fa fa-users text-lg opacity-10" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="fixed-botombutton">
-                <div class="action_Save">
-                    <div class="text-danger text-gradient text-sm font-weight-bold" data-languagedyn="textShowMessage" id="textShowMessage"></div>
-                    <div class="action_Save-Content">
-                        <button data-languagestatic="button_cancel" class="btn btn-secondary" form="form_Career" onclick="event.preventDefault();CloseModal()">Cancel</button>
-                        <button data-languagestatic="button_cancel" class="btn bg-gradient-primary mt-2 me-2 _tab_control_" form="form_Career" onclick="event.preventDefault();ExecuteText()">Save</button>
-                        <button data-languagestatic="button_ok" form="form_Career" type="button" class="btn bg-gradient-primary mt-2 me-2 _tab_control_" data-tab="edit_tab_career" onclick="event.preventDefault();PopUpDetail()">PopUp</button>
+                <div class="col-lg-5 col-sm-6">
+                    <div class="card  mb-4">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="numbers">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">User Number Accessing</p>
+                                        <h5 class="font-weight-bolder mb-0">
+                                            <span id="Dash_User_Number_Accessing" countto="123">123</span>
+                                            <span class="text-success text-sm font-weight-bolder">
+                                                55%
+                                            </span>
+                                        </h5>
+                                    </div>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                                        <i class="fa fa-users text-lg opacity-10" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12">
+            <div id="globe" class="position-absolute end-0 top-10 mt-sm-3 mt-7 me-lg-7 peekaboo">
+                <canvas width="700" height="655" class="w-lg-100 h-lg-100 w-75 h-75 me-lg-0 me-n10 mt-lg-5" style="width: 700px; height: 655.594px;"></canvas>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="./Assets/js/custom-validation.js"></script>
+<script src="./Assets/js/plugins/threejs.js"></script>
+<script src="./Assets/js/plugins/orbit-controls.js"></script>
+<script src="./js/Common/globe.js"></script>
 <script type="text/javascript">
     var MasterDataMenu = [
           {
               "Name":"Dashboards"
               ,"Img":"",
               "child":[
-                  {"Name":"EditUser"
+                  {"Name":"Dashboards"
                     ,"ChildNode":[]
                     ,"Img":""
                     ,"Url":"@Url.Action("User","Home")"
@@ -61,9 +102,6 @@
                     ,"ChildNode":[]
                     ,"Img":""
                     ,"Url":"@Url.Action("EditRole","Mater")"
-                  }
-                  ,{"Name":"Virtual Reality"
-                    ,"ChildNode":[]
                   }
                   ,{"Name":"CRM"
                     ,"ChildNode":[]
@@ -302,9 +340,34 @@
               ,"child":[]
           }
           ,{
-              "Name":"Changelog"
+              "Name":"Admin"
               ,"Img":""
-              ,"child":[]
+              ,"child":[
+                  {
+                      "Name":"Users"
+                      ,"ChildNode":[]
+                      ,"Img":""
+                      ,"Url":""
+                  }
+                  ,{
+                      "Name":"Edit Profiles"
+                      ,"ChildNode":[]
+                      ,"Img":""
+                      ,"Url":""
+                  }
+                  ,{
+                      "Name":"Setting Users"
+                      ,"ChildNode":[]
+                      ,"Img":""
+                      ,"Url":""
+                  }
+                  ,{
+                      "Name":"Default"
+                      ,"ChildNode":[]
+                      ,"Img":""
+                      ,"Url":""
+                  }
+              ]
           }]
     const iconNavbarSidenav = document.getElementById('iconNavbarSidenav');
     const iconSidenav = document.getElementById('iconSidenav');
@@ -315,6 +378,7 @@
         ShowMenuMater();
         CloseMneuMater();
        LoadMenuMater("sidenav-collapse-main");
+       DashMasterCountUpNumber('Dash_User_Number_Accessing');
         $("#Layout_EditUser").addClass('active');
          $("#Dashboards").addClass('show');
         var ele=document.querySelectorAll('.settingCollapse');
@@ -345,6 +409,16 @@
             })
         });
     });
+    function DashMasterCountUpNumber(id){
+        if (document.getElementById(id)) {
+          const countUp = new CountUp(id, document.getElementById(id).getAttribute("countTo"));
+          if (!countUp.error) {
+            countUp.start();
+          } else {
+            console.error(countUp.error);
+          }
+        }
+    }
     ////
     function ExecuteText(){
         console.log($('#form_Career'));
