--- a/TrinhTest/Views/Pages/Login/Login.cshtml
+++ b/TrinhTest/Views/Pages/Login/Login.cshtml
@@ -132,7 +132,7 @@
                                             <a class="text-primary text-gradient font-weight-bold">Sign in</a>
                                         </p>
                                         <p class="mb-4 mx-auto cursor-pointer" id="LoginResetPass">
-                                            <a href="#" class="pe-none bg-gradient-info text-gradient font-weight-bold">Quên mật khẩu?</a>
+                                            <a href="#" class="pe-none bg-gradient-info text-gradient font-weight-bold">Forgot Password?</a>
                                         </p>
                                     </div>
                                 </div>
@@ -140,7 +140,7 @@
                         </div>
                         <div id="globe" class="col-xl-5 col-md-6 h-100 my-auto pe-0 position-absolute top-0 end-0 text-center justify-content-center flex-column">
                             <div class="h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center">
-                               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLvndt98irt6Hj1CsAvhjLVAh6jte4K8q0Pw&usqp=CAU" alt="pattern-lines" style="width:100% ;height:100%">
+                               <canvas width="700" height="655" class="w-lg-100 h-lg-100 w-75 h-75 me-lg-0 me-n10 mt-lg-5" style="width: 700px; height: 655.594px;"></canvas>
                             </div>
                         </div>
                     </div>
@@ -153,6 +153,9 @@
         </div>
     </footer>
 </body>
+<script src="./Assets/js/plugins/threejs.js"></script>
+<script src="./Assets/js/plugins/orbit-controls.js"></script>
+<script src="./js/Common/globe.js"></script>
 <script type="text/javascript">
     var userId=localStorage.getItem("userID");
     $(document).ready(function () {
