--- a/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
@@ -27,7 +27,7 @@
                                     <div class="numbers">
                                         <p class="text-sm mb-0 text-capitalize font-weight-bold">User Number Accessing</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_User_Number_Accessing" countto="123">123</span>
+                                            <span id="Dash_User_Number_Accessing" countto="123"></span>
                                             <span class="text-success text-sm font-weight-bolder">
                                                 55%
                                             </span>
@@ -51,7 +51,7 @@
                                     <div class="numbers">
                                         <p class="text-sm mb-0 text-capitalize font-weight-bold">User Number Accessing</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_User_Number_Accessing" countto="123">123</span>
+                                            <span id="Dash_User_Number_Accessing" countto="123"></span>
                                             <span class="text-success text-sm font-weight-bolder">
                                                 55%
                                             </span>
@@ -73,138 +73,53 @@
                     <div class="card ">
                         <div class="card-header pb-0 p-3">
                             <div class="d-flex justify-content-between">
-                                <h6 class="mb-2">Sales By Function</h6>
+                                <h6 class="mb-2">Price Services</h6>
+                                <div class="d-flex">
+                                    <h6 class="mb-2" id="Dash_SumCountPrice" countto="">
+                                    </h6>
+                                    <span class="ms-2">  VNĐ</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="table-responsive">
-                            <table class="table align-items-center ">
-                                <tbody>
-                                    <tr>
-                                        <td class="w-30">
-                                            <div class="d-flex px-2 py-1 align-items-center">
-                                                <div>
-                                                    <img src="assets/img/icons/flags/US.png" alt="Country flag">
-                                                </div>
-                                                <div class="ms-4">
-                                                    <p class="text-xs font-weight-bold mb-0">Country:</p>
-                                                    <h6 class="text-sm mb-0">United States</h6>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Sales:</p>
-                                                <h6 class="text-sm mb-0">2500</h6>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Value:</p>
-                                                <h6 class="text-sm mb-0">$230,900</h6>
-                                            </div>
-                                        </td>
-                                        <td class="align-middle text-sm">
-                                            <div class="col text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Bounce:</p>
-                                                <h6 class="text-sm mb-0">29.9%</h6>
-                                            </div>
-                                        </td>
+                        <div class="m-0 my-3 mobile-responsive">
+                            <table id="dtContentPriceServices" class="table vt-table mb-0">
+                                <thead class="hiddenCollapse">
+                                    <tr role="row">
+                                        <th class="d-none">ID</th>
+                                        <th data-languagestatic="no">#</th>
+                                        <th data-languagestatic="Image">Image</th>
+                                        <th data-languagestatic="name">Tên</th>
+                                        <th data-languagestatic="Price">Giá</th>
+                                        <th data-languagestatic="CreateDate">Ngày Tạo</th>
                                     </tr>
-                                    <tr>
-                                        <td class="w-30">
-                                            <div class="d-flex px-2 py-1 align-items-center">
-                                                <div>
-                                                    <img src="assets/img/icons/flags/DE.png" alt="Country flag">
-                                                </div>
-                                                <div class="ms-4">
-                                                    <p class="text-xs font-weight-bold mb-0">Country:</p>
-                                                    <h6 class="text-sm mb-0">Germany</h6>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Sales:</p>
-                                                <h6 class="text-sm mb-0">3.900</h6>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Value:</p>
-                                                <h6 class="text-sm mb-0">$440,000</h6>
-                                            </div>
-                                        </td>
-                                        <td class="align-middle text-sm">
-                                            <div class="col text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Bounce:</p>
-                                                <h6 class="text-sm mb-0">40.22%</h6>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="w-30">
-                                            <div class="d-flex px-2 py-1 align-items-center">
-                                                <div>
-                                                    <img src="assets/img/icons/flags/GB.png" alt="Country flag">
-                                                </div>
-                                                <div class="ms-4">
-                                                    <p class="text-xs font-weight-bold mb-0">Country:</p>
-                                                    <h6 class="text-sm mb-0">Great Britain</h6>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Sales:</p>
-                                                <h6 class="text-sm mb-0">1.400</h6>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Value:</p>
-                                                <h6 class="text-sm mb-0">$190,700</h6>
-                                            </div>
-                                        </td>
-                                        <td class="align-middle text-sm">
-                                            <div class="col text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Bounce:</p>
-                                                <h6 class="text-sm mb-0">23.44%</h6>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="w-30">
-                                            <div class="d-flex px-2 py-1 align-items-center">
-                                                <div>
-                                                    <img src="assets/img/icons/flags/BR.png" alt="Country flag">
-                                                </div>
-                                                <div class="ms-4">
-                                                    <p class="text-xs font-weight-bold mb-0">Country:</p>
-                                                    <h6 class="text-sm mb-0">Brasil</h6>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Sales:</p>
-                                                <h6 class="text-sm mb-0">562</h6>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Value:</p>
-                                                <h6 class="text-sm mb-0">$143,960</h6>
-                                            </div>
-                                        </td>
-                                        <td class="align-middle text-sm">
-                                            <div class="col text-center">
-                                                <p class="text-xs font-weight-bold mb-0">Bounce:</p>
-                                                <h6 class="text-sm mb-0">32.14%</h6>
-                                            </div>
-                                        </td>
-                                    </tr>
+                                </thead>
+                                <tbody data-languagedyn="grid" id="dtContentPriceServicesBody">
                                 </tbody>
                             </table>
+                            <div class="dataTable-bottom">
+                                <div class="dataTable-info">Showing 1 to <span id="CountShow">6</span> of <span id="SumCountPagin">12</span> entries</div>
+                                <nav class="dataTable-pagination">
+                                    <ul class="dataTable-pagination-list">
+                                        <li class="pager">
+                                            <a href="#" data-page="1">
+                                                ‹
+                                            </a>
+                                        </li>
+                                        <li class="active">
+                                            <a href="#" data-page="1">1</a>
+                                        </li>
+                                        <li class="">
+                                            <a href="#" data-page="2">2</a>
+                                        </li>
+                                        <li class="">
+                                            <a href="#" data-page="3">3</a>
+                                        </li>
+                                        <li class="pager">
+                                            <a href="#" data-page="2">›</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -549,6 +464,7 @@
             $("#MainRenderBody").load("@Url.Action("LoadFriendChat","Messages")");
             })
         });
+        LoadataPriceServices();
     });
     function DashMasterCountUpNumber(id){
         if (document.getElementById(id)) {
@@ -658,7 +574,56 @@
         sidenav.classList.remove('bg-transparent');
         iconSidenav.classList.remove('d-none');
         }
-    }
+    };
+    function LoadataPriceServices(){
+           AjaxLoad(url = "/api/PriceServices/LoadPriceServices"
+            ,data= JSON.stringify({
+                Pagination:0
+            })
+            ,async = true
+            , error = function () { notiError_SW() }
+            , success = function (result) {
+                if (result != null && result!='') {
+                    data=JSON.parse(result);
+                   document.getElementById("SumCountPagin").innerHTML =data.CountData;
+                   document.getElementById("CountShow").innerHTML = data.lstPriceServicesDTO.length;
+                   Render_Dash_Master_Price_Services("dtContentPriceServicesBody",data.lstPriceServicesDTO);
+                }
+            })
+       };
+    function Render_Dash_Master_Price_Services(id,data){
+        let myNode = document.getElementById(id);
+        let idSumCoun="Dash_SumCountPrice";
+        if (myNode != null) {
+            myNode.innerHTML = '';
+            let stringContent = '';
+            let sumPrice=0;
+            if (data && data.length > 0) {
+                for (let i = 0; i < data.length; i++) {
+                    let item = data[i];
+                    sumPrice=sumPrice+parseInt(item.Price);
+                    let tr =
+                        '<td class="d-none">' + item.CodeServices + '</td>'
+                        + '<td class="vt-number-order"></td>'
+                        + '<td>'
+                        + '<div class="icon icon-shape icon-sm me-2 text-center" >'
+                        + '<img class="avatar m-2" src="./Assets/img/'+item.Images+'" alt="label-image">'
+                        + '</div>'
+                        +'</td>'
+                        + '<td><a href="#" class="ms-3 my-auto text-bold">' + item.Name + '</a></td>'
+                        + '<td class="text-sm text-dark">' + item.Price + ' VNĐ</td>'
+                        + '<td data-name="date" class="text-sm text-dark">' + yyyyMMddHHMMM_ddMMyyyy(item.CreateDate) + '</td>'
+                        +'<td data-name="is_show_app">'
+                    stringContent = stringContent + '<tr class="vt-number" role="row">' + tr + '</tr>';
+                }
+            }
+            if (document.getElementById(idSumCoun).hasAttribute("countTo")) {
+                     document.getElementById(idSumCoun).setAttribute("countTo", sumPrice);
+                     DashMasterCountUpNumber(idSumCoun);
+             };
+            document.getElementById(id).innerHTML = stringContent;
+        }
+    };
 </script>
 
 <style>
