--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -41,13 +41,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrinhTest</title>
     <link href='./Assets/css/soft-ui-dashboard.css' rel="stylesheet" />
+    <link href='./css/root_element_grid.css' rel="stylesheet" />
+    <link href='./css/root_element_color.css' rel="stylesheet" />
+    <link href='./Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss' rel="stylesheet" />
     <script src="~/js/Preload/preload.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="/js/Preload/basket.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    @*    <script src="https://cdn.jsdelivr.net/npm/rsvp@4/dist/rsvp.min.js"></script>*@
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <script src="/Assests/js/ajax.min.js" type="text/javascript"></script>
     <link href="/css/master1.css" rel="stylesheet" />
@@ -58,11 +60,12 @@
     <script>css_require("/Assests/dist/css/scrollbar.css")</script>
     <script src="/Assets/js/core/bootstrap.js"></script>
     <script src="/js/Common/Popup.js"></script>
-    @*    <script src="~/js/Common/Datetime.js"></script>*@
+    <script src="~/js/Common/Datetime.js"></script>
     <script src="~/js/Common/noti_function.js"></script>
     <script src="~/js/Common/countup.min.js"></script>
     <script src="~/js/Common/Common.js"></script>
     <script src="./lib/jquery-validation/dist/semantic.min.js"></script>
+    <script src="./Assets/js/plugins/datatables.js"></script>
 </head>
 <body class="g-sidenav-show bg-gray-100 " id="BodyMain">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 ps ps--active-y ps--collapsing-y" id="sidenav-main">
@@ -171,9 +174,7 @@
                 </div>
             </div>
         </nav>
-
         <!-- End Navbar -->
-
 
         <div id="MessPageDiv">
             <div class="notiBody" style="display: none;">
