--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
     <script src="~/js/Common/Datetime.js"></script>
     <script src="~/js/Common/noti_function.js"></script>
     <script src="~/js/Common/countup.min.js"></script>
-    <script src="~/js/Common/Common.js"></script>
+    <script src="./js/Common/Common.js"></script>
     <script src="./lib/jquery-validation/dist/semantic.min.js"></script>
     <script src="./Assets/js/plugins/datatables.js"></script>
 </head>
