--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
         var VDNAME = '@ViewData["NAME"]'.toLowerCase();
         var VDMINIFY = "true";
         var VDVERSION = "6.0";
+        const versionofWebApplication = '1681282715158';
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,7 +44,7 @@
     <link href='./Assets/css/soft-ui-dashboard.css' rel="stylesheet" />
     <link href='./css/root_element_grid.css' rel="stylesheet" />
     <link href='./css/root_element_color.css' rel="stylesheet" />
-    <link href='./Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss' rel="stylesheet" />
+    <script href='./Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss'></script>
     <script src="~/js/Preload/preload.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -52,7 +53,7 @@
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <script src="/Assests/js/ajax.min.js" type="text/javascript"></script>
-    <link href="/css/master1.css" rel="stylesheet" />
+    <link href="./css/master1.css" rel="stylesheet" />
     <script>css_require('/css/main.custom.css')</script>
     <script>css_require("/css/text_editor.css")</script>
     <script>css_require("/css/button.css")</script>
@@ -66,6 +67,7 @@
     <script src="./js/Common/Common.js"></script>
     <script src="./lib/jquery-validation/dist/semantic.min.js"></script>
     <script src="./Assets/js/plugins/datatables.js"></script>
+     <script src='./Assests/dist/Paginationjs/paginationjs.min.js'></script>
 </head>
 <body class="g-sidenav-show bg-gray-100 " id="BodyMain">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 ps ps--active-y ps--collapsing-y" id="sidenav-main">
