--- a/TrinhTest/Views/Pages/Setting/PriceServices/SettingPriceServices.cshtml
+++ b/TrinhTest/Views/Pages/Setting/PriceServices/SettingPriceServices.cshtml
@@ -78,6 +78,7 @@
                                 Render_Dash_Master_Price_Services("dtContentPriceServicesBody",data);
                             }
                         });
+                        $("#button_Anamnesis_Print").show();
                 }
             })
        };
