--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -227,91 +227,63 @@
         <div id="MainRenderBody_Manual" class="pusher  mx-3 border-radius-lg  px-0">
         </div>
     </main>
-
-    <div class="fixed-plugin ps">
-        <a class="fixed-plugin-button position-fixed px-3 py-2 pulse">
-            <i class="fa fa-whatsapp py-2" aria-hidden="true"> </i>
-        </a>
-        <div class="card shadow-lg blur">
-            <div class="card-header pb-0 pt-3  bg-transparent ">
-                <div class="float-start">
-                    <h5 class="mt-3 mb-0">Soft UI Configurator</h5>
-                    <p>ChatBots.</p>
-                </div>
-                <div class="float-end mt-4">
-                    <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
-                        <i class="fa fa-close" aria-hidden="true"></i>
-                    </button>
-                </div>
-
-            </div>
-            <hr class="horizontal dark my-1">
-            <div class="card-body pt-sm-3 pt-0">
-            </div>
-        </div>
-
         <div class="position-fixed bottom-1 end-1 z-index-2" id="MS_Notification">
         </div>
-
-        <div class="position-absolute top-0 start-50 translate-middle-x z-index-2" id="MS_NotificationTop">
-            <div id="CallCenter_Area" class="toast fade show p-2 mt-2 bg-gradient-info d-none" role="alert" aria-live="assertive" aria-atomic="true">
-                <audio id="audio_callcenter" autoplay="autoplay" loop></audio>
-                <div class="toast-header bg-transparent border-0">
-                    <i class="fab fa-stumbleupon-circle fa-spin text-md text-white me-3" aria-hidden="true"></i>
-                    <span id="CallCenter_Header" class="me-auto text-white font-weight-bold">Incomming Call</span>
-
-                </div>
-                <hr class="horizontal light m-0">
-                <div class="toast-body text-white">
-                    <div class="d-flex align-items-center">
-                        <div class="icon icon-shape icon-sm me-3 shadow text-center">
-                            <img id="CallCenter_Avatar" alt="avatar" src="/assests/img/gray.png"
-                                 class="call-animation avatar avatar-sm" />
-                        </div>
-                        <div class="d-flex flex-column">
-                            <h6 id="CallCenter_Phone" class="text-md text-white mb-0"></h6>
-                            <h6 id="CallCenter_Name" class="mb-1 text-sm text-white"></h6>
-
-                        </div>
-
-                    </div>
-                    <div class="d-flex ms-5" id="CallCenter_MultiPhone">
-                    </div>
-                    <div class="d-flex mt-4" id="CallCenter_HangDiv">
-                        <div class="text-center">
-                            <button class="btn bg-gradient-light btn-sm my-0"
-                                    onclick="event.preventDefault();return CCF_Incom_Decline()">
-                                Decline
-                            </button>
-                        </div>
-                        <div class="d-flex flex-column ms-auto">
-                            <button class="btn bg-gradient-success btn-sm my-0"
-                                    onclick="event.preventDefault();return CCF_Incom_Accept();">
-                                Accept
-                            </button>
-                        </div>
-                    </div>
-                    <div id="CallCenter_ProgressingArea" class="d-flex mt-4 d-none">
-                        <div class="text-center">
-                            <div id="CallCenter_ProgressingTime"></div>
-                        </div>
-                        <div class="d-flex ms-auto">
-
-                            <div id="CallCenter_ProgressingMute" class=" cursor-pointer  icon-shape icon-xs shadow border-radius-lg blur text-center me-2 d-flex align-items-center justify-content-center">
-                                <i class="fas fa-microphone text-dark  text-md pt-2" style=" font-size: 14px;"></i>
-                            </div>
-                            <div id="CallCenter_ProgressingUnMute" class="cursor-pointer  icon icon-shape icon-xs shadow border-radius-lg bg-gradient-danger text-center me-2 d-flex align-items-center justify-content-center d-none">
-                                <i class="text-white fas fa-microphone-slash text-md pt-2" style=" font-size: 14px;"></i>
-                            </div>
-
-                            <span id="CallCenter_ProgressingEndCall" class="cursor-pointer badge bg-gradient-danger">End call</span>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <script>
+            $(document).ready(function () {
+            Master_CheckingMenuSelected();
+            Master_RenderMenu();
+        });
+            function Master_CheckingMenuSelected () {
+            let url = window.location.pathname;
+
+            $(".menudesktop_render").each((idx, ele) => {
+                let currlink = $(ele).attr("href");
+                if (currlink.includes(url)) {
+                    if (ele.id != "menuCustomerCreate") {
+                        $(ele).addClass("active");
+                        $(ele).closest(".collapsesticky").siblings('.nav-link').addClass("active");
+                        $(ele).closest(".collapsesticky").addClass("show")
+                        MS_UrlRoot = $(ele).closest(".collapsesticky").siblings('.nav-link').find(".nav-link-text").text();
+                        MS_UrlChild = $(ele).children('.sidenav-normal').text();
+
+                    }
+                }
+            })
+        }
+        function Master_RenderMenu () {
+            RenderMenuDesktop(PermissionTableMenu, "menuDesktopCategory");
+            $('#menuDesktopCategory').on('click', '.menudesktop_render', function (e) {
+                e.preventDefault();
+                $('#menuDesktopCategory .menuparent_render').removeClass('active');
+                $('#menuDesktopCategory .menudesktop_render').removeClass('active');
+                let namechild = '', namegroup = '';
+                namechild = $(this).attr("data-name");
+                $(this).addClass('active');
+                let objparent = $(this).parent().parent();
+                if (objparent != undefined) {
+                    objparent.addClass('active');
+                    namegroup = objparent.attr("data-name");
+                }
+                let href = $(this).attr('href');
+                let hreflayoutnone = href + '?layout=none' + '&ver=' + versionofWebApplication;
+                MS_UrlRoot = namegroup;
+                MS_UrlChild = namechild;
+                if (href != '#') {
+                    $.ajax({
+                        url: hreflayoutnone,
+                        success: function (data) {
+                            $("#MainRenderBody").empty();
+                            $("#MainRenderBody_Manual").html(data);
+                            window.history.pushState(href, 'Title', href);
+                            MS_SetHeaderNavi();
+                        }
+                    })
+                }
+
+            });
+
+        }
         </script>
         @await RenderSectionAsync("Scripts", required: false)
         <script src="./Assests/dist/signalr/dist/browser/signalr.js"></script>
